# ECC2026

./: .gitignore  CMakeLists.txt  adaptive.cpp  bind.cpp  bindtest.py  cba_melhorado.py  compile.sh  dyn_control.py  headers.hpp  test_uaibot_dyn.py  vfutils.py
